objects/TracHier__Usage_Metrics__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Usage metrics collected by Traction Hierarchies.</description>
    <fields>
        <fullName>TracHier__Account_Count__c</fullName>
        <description>Count of Account records in current org.</description>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Child_Object_Count__c</fullName>
        <description>Count of Hierarchy Child Objects in current org.</description>
        <label>Child Object Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Date_Last_Sync__c</fullName>
        <description>The date and time of the most recent LMO sync.</description>
        <inlineHelpText>The date and time of the most recent LMO sync.</inlineHelpText>
        <label>Date of Last LMO Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Fullscreen_Whitespace_Opens_Count__c</fullName>
        <description>Count of how many times the fullscreen Whitespace page is opened in current org.</description>
        <label>Fullscreen Whitespace Opens Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_Click_Count__c</fullName>
        <description>Count of clicks on hierarchy in current org.</description>
        <label>Hierarchy Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_Count__c</fullName>
        <description>Count of Hierarchies in current org.</description>
        <label>Hierarchy Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_Scroll_Count__c</fullName>
        <description>Count of scrolls on hierarchy in current org.</description>
        <label>Hierarchy Scroll Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Hierarchy_Users_Active__c</fullName>
        <description>Count of active users in hierarchy for current org.</description>
        <label>Hierarchy Users Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Last_Build_Hierarchy_Date__c</fullName>
        <description>The date and time of the most recent processing by Build Hierarchies.</description>
        <inlineHelpText>The date and time of the most recent processing by Build Hierarchies.</inlineHelpText>
        <label>Last Build Hierarchy Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__Last_Build_Rollup_Date__c</fullName>
        <description>The date and time of the most recent processing by Build Rollups.</description>
        <inlineHelpText>The date and time of the most recent processing by Build Rollups.</inlineHelpText>
        <label>Last Build Rollups Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracHier__License_Count__c</fullName>
        <description>Count of Salesforce licenses in current org.</description>
        <label>License Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Rollup_Count__c</fullName>
        <description>Count of Rollups in current org.</description>
        <label>Rollup Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Settings_Enabled_A__c</fullName>
        <label>Settings Enabled Set A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Settings_Enabled_B__c</fullName>
        <label>Settings Enabled Set B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Users_Overridden_Fields__c</fullName>
        <description>Count of users with overridden fields in current org.</description>
        <label>Users Overridden Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__Users_Overridden_Filters__c</fullName>
        <description>Count of users with overridden filters in current org.</description>
        <label>Users Overridden Filters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracHier__WS_CreateAccount_Count__c</fullName>
        <description>Count of WhiteSpace Create Account Count.</description>
        <label>Create Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Usage Metrics</label>
</CustomObject>